// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileList component render correctly when onClick is defined 1`] = `
<div>
  <div
    class="MuiPaper-root MuiCard-root TileList-tile-85 TileList-clickable-86 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root TileList-icon-88"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
      />
    </svg>
    <div
      class="TileList-description-87"
    >
      <p
        class="MuiTypography-root Typography-root-89 MuiTypography-body1"
        data-testid="typography"
      >
        Text 1
      </p>
    </div>
  </div>
</div>
`;

exports[`TileList component renders correctly 1`] = `
<div>
  <div
    class="TileList-wrapper-2"
  >
    <div
      class="MuiPaper-root MuiCard-root TileList-tile-3 MuiPaper-elevation1 MuiPaper-rounded"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root TileList-icon-6"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <div
        class="TileList-description-5"
      >
        <p
          class="MuiTypography-root Typography-root-7 MuiTypography-body1"
          data-testid="typography"
        >
          Text 1
        </p>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiCard-root TileList-tile-3 MuiPaper-elevation1 MuiPaper-rounded"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root TileList-icon-6"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <div
        class="TileList-description-5"
      >
        <p
          class="MuiTypography-root Typography-root-7 MuiTypography-body1"
          data-testid="typography"
        >
          Text 2
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`TileList component renders correctly with pagination 1`] = `
<div>
  <div
    class="TileList-wrapper-16"
  >
    <div
      class="MuiPaper-root MuiCard-root TileList-tile-17 MuiPaper-elevation1 MuiPaper-rounded"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root TileList-icon-20"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <div
        class="TileList-description-19"
      >
        <p
          class="MuiTypography-root Typography-root-21 MuiTypography-body1"
          data-testid="typography"
        >
          Text 1
        </p>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiCard-root TileList-tile-17 MuiPaper-elevation1 MuiPaper-rounded"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root TileList-icon-20"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <div
        class="TileList-description-19"
      >
        <p
          class="MuiTypography-root Typography-root-21 MuiTypography-body1"
          data-testid="typography"
        >
          Text 2
        </p>
      </div>
    </div>
  </div>
  <div
    class="TileList-button-15"
  >
    <button
      class="MuiButtonBase-root MuiButton-root Button-root-29 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label Button-label-32"
      >
        Show More
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`TileList component shows more tiles on 'Show more' click 1`] = `
<div>
  <div
    class="TileList-wrapper-50"
  >
    <div
      class="MuiPaper-root MuiCard-root TileList-tile-51 MuiPaper-elevation1 MuiPaper-rounded"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root TileList-icon-54"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <div
        class="TileList-description-53"
      >
        <p
          class="MuiTypography-root Typography-root-55 MuiTypography-body1"
          data-testid="typography"
        >
          Text 1
        </p>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiCard-root TileList-tile-51 MuiPaper-elevation1 MuiPaper-rounded"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root TileList-icon-54"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <div
        class="TileList-description-53"
      >
        <p
          class="MuiTypography-root Typography-root-55 MuiTypography-body1"
          data-testid="typography"
        >
          Text 2
        </p>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiCard-root TileList-tile-51 MuiPaper-elevation1 MuiPaper-rounded"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root TileList-icon-54"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <div
        class="TileList-description-53"
      >
        <p
          class="MuiTypography-root Typography-root-55 MuiTypography-body1"
          data-testid="typography"
        >
          Text 3
        </p>
      </div>
    </div>
  </div>
</div>
`;
